--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "astro": "^5.13.5",
+    "astro-icon": "^1.1.5",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
