--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [feat-downloads-page]
+    branches: [feats-downloads-page]
   workflow_dispatch:
 
 permissions:
@@ -14,10 +14,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout your repository using git
+      - name: Checkout the repository using git
         uses: actions/checkout@v4
 
-      - name: Install, build, and upload your site
+      - name: Install, build, and upload the site
         uses: withastro/action@v4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
