--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prettify": "prettier --write ."
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.6.0",
     "@tailwindcss/vite": "^4.1.13",
     "astro": "^5.13.5",
     "astro-icon": "^1.1.5",
